--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .calculator {
-	height: 60vh;
+	height: 50vh;
 	min-width: 370px;
 	max-width: 370px;
 }
@@ -26,9 +26,9 @@ body {
 	width: 100%;
 	min-height: 20%;
 	max-height: min-content;
-	-webkit-box-shadow: 0px 0px 37px -6px rgba(70, 35, 122, 1);
-	-moz-box-shadow: 0px 0px 37px -6px rgba(70, 35, 122, 1);
-	box-shadow: 0px 0px 37px -6px rgba(70, 35, 122, 1);
+	-webkit-box-shadow: 0px 0px 30px -6px rgba(167, 167, 167, 1);
+	-moz-box-shadow: 0px 0px 30px -6px rgba(167, 167, 167, 1);
+	box-shadow: 0px 0px 30px -6px rgba(167, 167, 167, 1);
 	color: #fff;
 	word-break: break-all;
 	text-align: right;
@@ -36,6 +36,7 @@ body {
 	justify-content: space-between;
 	flex-direction: column;
 	padding-right: 5px;
+	margin-bottom: 10px;
 }
 
 .currentNumber {
@@ -59,4 +60,54 @@ body {
 	background-color: rgba(0, 0, 0, 0.466);
 	color: #fff;
 	cursor: pointer;
+	transition: all 0.2s linear;
+}
+
+button:hover {
+	background-color: rgba(0, 0, 0, 0.666);
+}
+
+.equals {
+	grid-row: -1/-3;
+	grid-column: -2/-1;
+}
+
+.calculator-history {
+	height: 50vh;
+	margin: 20px;
+	width: 150px;
+	padding: 5px;
+	text-align: center;
+	color: #fff;
+	background-color: rgba(20, 27, 27, 0.151);
+}
+
+.history {
+	list-style: none;
+}
+
+.history-title {
+	padding: 10px;
+}
+
+.history-btn {
+	display: none;
+	border: none;
+	font-style: 15px;
+	padding: 8px;
+	border-radius: 15px;
+	background-color: rgba(29, 27, 27, 0.603);
+	color: #fff;
+	cursor: pointer;
+	outline: none;
+	margin: 5px auto;
+}
+
+.history-btn.active {
+	display: block;
+}
+
+.history-item {
+	margin: 5px 0;
+	letter-spacing: 1px;
 }
